--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
         "cheerio": "^1.0.0-rc.2",
+        "nth-check": "^2.0.1",
         "md5": "^2.2.1"
     },
     "name": "taboo4",
